add country information

--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@ layout: default
 
   <p>codescape - Stefan Glase<br/>
   Alte Holzer Str. 26a<br/>
-  42799 Leichlingen</p>
+  42799 Leichlingen<br/>
+  Germany</p>
 
   <p><strong>Represented by:</strong><br/>
   Stefan Glase</p>
