improve about us

--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@ layout: default
 
   <h2>About Us</h2>
 
-  <p>codescape creates well-crafted software with more than ten years of experience in software development. We love to constantly improve our products while keeping the code simple and error-free by keeping a high level of test automation and following software craftsmanship principles.</p>
+  <p>
+    codescape creates well-crafted software with more than ten years of professional experience in software development.
+    We love to constantly improve our products while keeping the code simple and bug free by maintaining a high level of test automation and following the principles of software craftsmanship.
+  </p>
+
+  <p>Our software is as good as it fits to your business and as it solves your problem.</p>
 
 </div>
 
