feat: add Multiple Subtasks for Jira

--- a/index.html
+++ b/index.html
@@ -42,6 +42,23 @@ layout: default
   <div class="row products">
     <div class="screenshot-wrapper">
 
+      <a href="https://jira-multiple-subtasks.codescape.de" target="_blank"><img src="/images/products-multiple-subtasks.png"/></a>
+
+    </div>
+    <div class="one-half offset-by-one-half column">
+
+      <p><strong>Multiple Subtasks for Jira</strong></p>
+
+      <p>Multiple Subtasks for Jira enables your teams to easily create multiple subtasks for their work items using a clean and interactive user interface that is seamlessly integrated into Jira Software. Multiple Subtasks for Jira comes with a simple but powerful syntax to create subtasks quickly helping to reduce the needed time for planning sessions for Scrum teams.</p>
+
+      <a class="button" target="_blank" href="https://jira-multiple-subtasks.codescape.de">Visit Website</a>
+
+    </div>
+  </div>
+
+  <div class="row products">
+    <div class="screenshot-wrapper">
+
       <a href="https://bitvunit.codescape.de" target="_blank"><img src="/images/products-bitvunit.png"/></a>
 
     </div>
