feat: add claim for open source development

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@ layout: default
   <p>
     codescape creates well-crafted software with more than ten years of professional experience in software development.
     We love to constantly improve our products while keeping the code simple and bug free by maintaining a high level of test automation and following the principles of software craftsmanship.
+    We're a company with an open source development model, and we believe working in the open is the only way to deserve your trust into our claim for well-crafted software.
   </p>
 
   <p>Our software is as good as it fits to your business and as it solves your problem.</p>
