--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: default
   <h2>About Us</h2>
 
   <p>
-    codescape creates well-crafted software with more than ten years of professional experience in software development.
+    codescape creates well-crafted software with more than fifteen years of professional experience in software development.
     We love to constantly improve our products while keeping the code simple and bug free by maintaining a high level of test automation and following the principles of software craftsmanship.
   </p>
   <p>
